--- a/OR/Configs/Cetus.cfg
+++ b/OR/Configs/Cetus.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#B7B7B7>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nCetus breaks all expectations for what a celestial body should look like. Its cylindrical shape is so unusual that we suspect the moon is not natural in origin. Further research Cetus is required for us to come to a proper conclusion. \n\nSome Kerbals think that Cetus looks like a muscial instrument, giving it the nickname "Big Drum in the Sky".
+			description = <color=#B7B7B7>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nA moon(?) that breaks all expectations for what a celestial body should look like. The object’s cylindrical shape is so bizarre that we suspect it is not of natural origin. Further research on Cetus is needed before we can draw any conclusions. \n\nSome Kerbals think that Cetus looks like an instrument, giving it the beloved nickname "Kraken’s Drum".
 
 			radius = 3000
 			geeASL = 0.015
