--- a/OR/Configs/Echo.cfg
+++ b/OR/Configs/Echo.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Echo
-		randomMainMenuBody = false
+		randomMainMenuBody = true
 		cacheFile = OR/Cache/Echo.bin
 		Template
 		{
@@ -13,8 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#47C199>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nEcho is one of two habitable planets in the Ignotum System. It has soaring blue skies, expansive oceans of water, and continents overflowing with what we believe to be plant life. The planet has a large set of rings and two mid-sized moons, one of which is exotic. Exploring this world is a top priority on our expedition. \n\nEcho was the planet we were supposed to colonize for the expedition. Clearly, that did not happen.\n\nWEATHER REPORT: Hazardous. Though Echo's weather is mostly mild, the planet is home to a massive, self-sustaining hypercane. With 10,000 vertical meters of pounding rains and devastating winds, this hypercane should be avoided at all costs.
-			
+			description = <color=#47C199>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nOne of two truly habitable planets in the Ignotum System. It has soaring blue skies, expansive oceans of water, and continents overflowing with what is undoubtedly plant life. A large set of rings and a mineral-rich moon decorate the planet. Exploring this world is a top priority for our expedition. \n\nEcho was the planet we were supposed to colonize for the expedition. The key phrase here is “supposed to.”\n\nWEATHER REPORT: Hazardous. While Echo's weather is generally mild, the planet is home to the most powerful class of tropical cyclone ever theorized: a hypercane. With 10,000 vertical meters of pounding rains and devastating winds, this storm should be avoided at all costs.
 			radius = 550000
 			geeASL = 0.93
 			albedo = 0.3
@@ -158,12 +157,6 @@
 			{
 				texture = OR/OR_Textures/PluginData/Echo_Watermap_New.dds
 				normals = OR/OR_Textures/PluginData/Echo_Normal.png
-			}
-			VertexColorMapEmissive
-			{
-				map = OR/OR_Textures/PluginData/Echo_Emissive.dds
-				brightness = 0.5
-				transparency = 0.5
 			}
 		}						
 		Atmosphere				
