--- a/OR/Configs/Fracture.cfg
+++ b/OR/Configs/Fracture.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#CC0300>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nFracture is a hellish world dancing on the edge of the inferno. Its proximity to Solus has partially melted its surface, creating dangerous lava oceans. A superheated atmosphere of escaping volcanic fumes and rock vapor encompasses the planet. Extreme caution should be taken while exploring the surface.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it, “looks like how Moho was supposed to according to the legends.”\n\nWEATHER REPORT: Severe. Vaporized rock escapes Fracture at speeds you're probably not comfortable with.
+			description = <color=#CC0300>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nA hellish world dancing on the edge of the inferno. Intense solar radiation has melted its surface into a chaotic mess of lava and jagged cliffs, and a superheated atmosphere vents volcanic fumes and rock vapor into deep space. The planet is tidally locked to Solus; exploring its dark side is ill advised.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it “looks like the Moho we were promised in the stories.”\n\nWEATHER REPORT: Unimaginable. Noxious gas escapes Fracture at speeds we aren’t comfortable with.
 			radius = 350000
 			geeASL = 0.6
 			albedo = 0.25
@@ -138,6 +138,7 @@
 			}
 			VertexColorMapEmissive
 			{
+				blendMode = Additive
 				map = OR/OR_Textures/PluginData/Fracture_Watermap_New2.dds
 				brightness = 1
 				transparency = 0.5
@@ -160,8 +161,8 @@
 			}
 			temperatureCurve				
 			{				
-				key =	-1	2500	0.00000E+00	1.51378E-04
-				key =	0	1500	0.00000E+00	1.51378E-04
+				key =	-1	1000	0.00000E+00	1.51378E-04
+				key =	0	980	0.00000E+00	1.51378E-04
 				key =	6606	970	1.51378E-04	-3.10897E-04
 				key =	13039	968	-3.10897E-04	-9.57243E-04
 				key =	19307	962	-9.57243E-04	-1.96399E-03
@@ -673,13 +674,30 @@
 				}
 			}
 		}
-		
+		HazardousBody
+		{
+			Item
+			{
+				ambientTemp = 5000
+				//biomeName = Lava Seas
+				AltitudeCurve
+				{
+					key =	350000 	1.0 	0.00E+00	-3.00E-02
+					key =	350002 	0.9 	0.00E+00	-3.00E-02
+					key =	350004 	0.75 	-3.00E-02	-2.67E-02
+					key =	350006 	0.55 	-2.67E-02	-1.67E-02
+					key =	350008 	0.25 	-1.67E-02	-1.00E-02
+					key =	350010 	0.1 	-1.00E-02	-1.67E-02
+					key =	350012 	0.00 	-2.00E-02	0.00E+00
+				}
+			}
+		}
 		Ocean
 		{
 			ocean = True
 			oceanColor = 1,0.423077047,0.187857881,1
 			oceanHeight = 0
-			density = 0.4
+			density = 5
 			minLevel = 2
 			maxLevel = 7
 			minDetailDistance = 8
