--- a/OR/Configs/Frontier.cfg
+++ b/OR/Configs/Frontier.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Kerbin
-		randomMainMenuBody = true
+		randomMainMenuBody = false
 		cacheFile = OR/Cache/Frontier.bin
 		Template
 		{
@@ -12,7 +12,8 @@
 		}
 		Properties
 		{
-			description = <color=#C1C1C1>[HAZARD LEVEL: 4] \n[CLASS: Exotic Atmospheric]</color> \nFrontier is the largest and oldest of the terrestrial planets in the Ignotum System. It is a bitterly cold world of rock and ice. Upon entering the Ignotum System, our ship malfunctioned, and we were forced to crash here. While the surface conditions are unfavorable, we have the equipment to survive and continue the expedition.\n\nAlthough the gravity is more intense than Kerbin’s, the atmosphere is not as tall, allowing for easy travel to space.\n\nWEATHER REPORT: Mild. Frontier is the least active celestial body in the entire solar system with no weather of any kind. This is a good thing for us.
+			description = <color=#C1C1C1>[HAZARD LEVEL: 3] \n[CLASS: Exotic Atmospheric]</color> \nThe largest and oldest terrestrial planet in the Ignotum System. It is a bitterly cold world of rock and ice that we now call home. Upon entering the Ignotum System, our ship malfunctioned, and we were forced to either crash here or asphyxiate in space. While the surface conditions are…unfavorable…we have the equipment to survive, and morale is high. The expedition will go on.\n\Though Frontier’s gravity is more intense than Kerbin’s, its atmosphere is shorter, enabling easy travel into space.\n\nWEATHER REPORT: Mild. Frontier is the least active celestial body in the entire solar system; it has no weather beyond occasional snowstorms. This is a good thing for us.
+
 			radius = 625000
 			geeASL = 1.15
 			albedo = 0.75
