--- a/OR/Configs/Hydra.cfg
+++ b/OR/Configs/Hydra.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#BCA189>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nA world of massive terrain deformation, Hydra is often cited as a more dangerous version of Pol. Skirting the edge of the most hostile terrestial planet in the solar system, this moon offers soaring stepped plateaus and expansive plains perfect for EVA jetpack exploration. \n\nUnlike its parent, Hydra is actually an enjoyable place to visit. Mind the low gravity, though.
+			description = <color=#BCA189>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nA world of massive terrain deformation often described as a more dangerous version of Pol. Situated safely beyond the influence of Scourge, this moon has soaring stepped plateaus and expansive plains perfect for EVA jetpack exploration. \n\nUnlike its parent, Hydra is a nice place to visit. Mind the low gravity, though!
 
 			radius = 12500
 			geeASL = 0.065
