--- a/OR/Configs/Rage.cfg
+++ b/OR/Configs/Rage.cfg
@@ -18,7 +18,7 @@
         Properties
         {
 			displayName = Rage^N
-            description = <color=#969696>[HAZARD LEVEL: 5] \n[CLASS: Gas Giant]</color> \nRage is a massive gas giant that marks the beginning of the outer solar system. It is home to the most violent storms known to Kerbalkind, and its pressures and temperatures exceed those of Jool. Exploration of Rage is therefore highly unrecommended. The planet has a system of three moons and one unclassified object. \n\nLanding on Rage is obviously not possible. Yes, nobody has checked yet, but we are all fairly confident that you will die.\n\nWEATHER REPORT: Severe. Rage's storms only grow more intense with depth. If the pressure doesn't kill you first, the wind and lightning certainly will. 
+            description = <color=#969696>[HAZARD LEVEL: 5] \n[CLASS: Gas Giant]</color> \nA massive gas giant marking the beginning of the outer Ignotum System. It is home to the most violent storms known to Kerbalkind, with pressures and temperatures exceeding those of Jool. Manned exploration is highly unrecommended. Thankfully, the planet has a system of three moons and one unclassified object to satisfy our desire for adventure. \n\nLanding on Rage is obviously not possible. Sure, nobody has checked yet, but we are all fairly confident that you will die trying.\n\nWEATHER REPORT: Severe. Rage's storms start strong and grow angrier with increasing depth. If the pressure doesn't kill first, the wind and lightning certainly will. 
 			
 			radius = 6200000
             geeASL = 0.82
