--- a/OR/Configs/Scar.cfg
+++ b/OR/Configs/Scar.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#AF7A56>[HAZARD LEVEL: 1] \n[CLASS: Exotic Vacuum]</color> \nScar is the only vacuum body known to have significant tectonic activity. Massive rifts and ridges crisscross its surface, which is extraordinarly warm in comparison to space. It is truly remarkable that we this interesting celestial body in such close proximity to our space center. \n\nDue to its similarities to a terrestrial world, astronomers have suggested building colonies on Scar; however, our best seismologists have warned that this would "Not be a good idea." 
+			description = <color=#AF7A56>[HAZARD LEVEL: 1] \n[CLASS: Exotic Vacuum]</color> \nThe only vacuum body known to have tectonic activity. Massive rifts and ridges crisscross its surface, which is extraordinarily warm for being in direct contact with space. We are very fortunate to have this celestial body in such proximity to our space center. \n\nDue to its similarities to a terrestrial world, astronomers have suggested building colonies on Scar. Our seismologists are saying that this would "not be a good idea." 
 
 			radius = 80000
 			geeASL = 0.08
