--- a/OR/Configs/ScienceDefinitions.cfg
+++ b/OR/Configs/ScienceDefinitions.cfg
@@ -1,4 +1,4 @@
-//MEOWSERS!
+// Have you found the magic boulder?
 
 
 
@@ -1546,10 +1546,10 @@
 		IceboundSrfLanded = There isn't a significant atmosphere here.
 		
 		//Silence (GOOD)
-		SilenceSrfSplashed = The air contains no oxygen. The sea spray is devoid of all life.
-		SilenceSrfLanded = The air contains a lots of spores. They quickly choke the analyzer.
-		SilenceFlyingLow = The air contains no oxygen but abundant spores. Weird.
-		SilenceFlyingHigh = The air contains no traces of oxygen. This is not a good sign for life.
+		SilenceSrfSplashed = The water is oxygenated, yet the sea spray is devoid of all life.
+		SilenceSrfLanded = The air contains a large quantity of spores. They quickly choke the analyzer.
+		SilenceFlyingLow = The air contains abundant spores. Weird.
+		SilenceFlyingHigh = The air contains oxygen -- a good start to any analysis!
 		
 		TheMagicBoulderSrfLanded = The air here is everything and nothing all at once.
 		
