--- a/OR/Configs/Scourge.cfg
+++ b/OR/Configs/Scourge.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#893030>[HAZARD LEVEL: 5+] \n[CLASS: Exotic Atmospheric]</color> \nA real-life embodiment of “look, but do not touch”, Scourge is to be avoided at all costs. Little is known about the planet due to its unpleasant nature: the air is dense and poisonous, and the land pulses from intense volcanic activity. Upon landing, probes sent to explore Scourge’s oceans were seized by an unknown force and sucked into oblivion, resulting in damage on an interstellar level. \n\nScourge was long omitted from the tracking station to avoid further incidents. We believe we are wise enough now not to make the same mistake again.\n\nWEATHER REPORT: Mild. Several of Scourge's active volcanoes spew gas and dust of an unknown composition. The planet is otherwise devoid of any cloud structures.
+			description = <color=#893030>[HAZARD LEVEL: ???] \n[CLASS: ???]</color> \nA real-life embodiment of “look, but do not touch”. This planet is to be avoided at all costs. Little is known about it due to its unpleasant nature: the air is dense and poisonous, the land pulses from intense volcanic activity, and upon landing, probes sent into its oceans were seized by an unknown force and sucked into oblivion. The dead kraken in our solar system was a joke played by whatever demon lives here. \n\nScourge was long omitted from the tracking station to avoid furt### ### # # ### # ##. We believe we are wise enough now not to make the same mistake again.\n\nWEATHER REPORT: Mild(?). Several of Scourge's active volcanoes spew gas and dust of an unknown composition. The planet is otherwise devoid of clouds.
 			
 			radius = 400000
 			geeASL = 0.75
@@ -704,6 +704,24 @@
 						key = 0.5     0.640 0.03 0.03
 						key = 1.0     0.6552 -0.02 -0.02
 					}
+				}
+			}
+		}
+		HazardousBody
+		{
+			Item
+			{
+				ambientTemp = 5000
+				biomeName = Volcanoes
+				AltitudeCurve
+				{
+					key =	400001 	1.0 	0.00E+00	-3.00E-02
+					key =	400002 	0.9 	0.00E+00	-3.00E-02
+					key =	400003 	0.75 	-3.00E-02	-2.67E-02
+					key =	400004 	0.55 	-2.67E-02	-1.67E-02
+					key =	400005 	0.25 	-1.67E-02	-1.00E-02
+					key =	400006 	0.1 	-1.00E-02	-1.67E-02
+					key =	400007 	0.00 	-2.00E-02	0.00E+00
 				}
 			}
 		}
