--- a/OR/Configs/Serenity.cfg
+++ b/OR/Configs/Serenity.cfg
@@ -18,7 +18,7 @@
         Properties
         {
 			displayName = Serenity^N
-            description = <color=#FFC6F5>[HAZARD LEVEL: 5] \n[CLASS: Ice Giant]</color> \n At almost four times the size of Kerbin, Serenity is the final known planet in the Ignotum System. It is locked in a binary orbit with another ice giant, providing explorers unique science opportunities. It is speculated that a deep layer of liquid separates Serenity's atmosphere from its exotic interior. \n\nIf not already obvious, you should probably avoid sending Kerbals here.\n\nWEATHER REPORT: Hazardous. While not as turbulent as Rage's, the cloud decks on Serenity are bitterly cold and windy.
+            description = <color=#FFC6F5>[HAZARD LEVEL: 5] \n[CLASS: Ice Giant]</color> \nAn ice giant almost four times the size of Kerbin. This is the final known planet in the Ignotum System. Locked in a binary orbit with another ice giant, it offers us endless opportunities for ground-breaking science and pretty pictures. It is speculated that a deep layer of liquid separates its atmosphere from its metallic interior. \n\nIf not already obvious, we should avoid sending Kerbals here.\n\nWEATHER REPORT: Hazardous. While not as turbulent as Rage, the cloud decks blanketing Serenity are bitterly cold.
 			
 			albedo = 0.3
 			radius = 2400000
