--- a/OR/Configs/Silence.cfg
+++ b/OR/Configs/Silence.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#75AAFF>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nSilence is the source of the famous interstellar SSTV signal. It was the original destination for the expedition before a more habitable planet was selected for colonization. The moon consists of a cold saltwater ocean and glacially locked continents. It appears Silence has small colonies of life on its surface. \n\nDespite the presence of what might be life, we have received no new signals from the Silence.\n\nWEATHER REPORT: Mild. Silence is mostly clear, having only a few mid-altitude clouds.
+			description = <color=#75AAFF>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nThe source of the famous interstellar SSTV signal redirected to us from Duna. It was the original destination for the expedition before Echo was selected for colonization. The moon consists of a cold saltwater ocean, glacially locked continents, and lonely rocky outcroppings. It also appears to have small colonies of life on its surface. \n\nDespite its continued habitability, we have received no new signals from the Silence.\n\nWEATHER REPORT: Mild. Silence is mostly clear, having only a few decks of mid-altitude clouds.
 			radius = 500000
 			geeASL = 0.9
 			albedo = 0.75
@@ -135,7 +135,7 @@
 		Atmosphere				
 		{				
 			enabled = True
-			oxygen = False
+			oxygen = True
 			altitude = 61000
 			adiabaticIndex = 1.35
 			atmosphereMolarMass = 0.03601
