--- a/OR/Configs/Solus.cfg
+++ b/OR/Configs/Solus.cfg
@@ -15,7 +15,7 @@
 		}
 		Properties
 		{
-			description = <color=#FFFFE1>[HAZARD LEVEL: 5] \n[CLASS: Star]</color> \nSolus is the main sequence star at the center of the Ignotum System. Though similar in size and color to Kerbol, Solus is far more active, with sunspots and solar weather unlike anything we've ever seen. Fortunately for the Ignotum System's habitable worlds, it appears that Solus CMEs are relatively rare. \n\nIf you look directly at Solus, it is really, really bright.\n\nWEATHER REPORT: Severe. White-hot death.
+			description = <color=#FFFFE1>[HAZARD LEVEL: 5] \n[CLASS: Star]</color> \nThe main sequence star at the center of the Ignotum System. Though similar in size and color to Kerbol, it is far more active, hosting sunspots and magnetic banding unlike anything we've seen. Fortunately for its child worlds, longitudinal studies of the star indicate that CMEs are rare. \n\nIf you look directly at Solus, it is really, really bright.\n\nWEATHER REPORT: White-hot death.
 			
 			radius = 76267400
 			starLuminosity = 1.1
