--- a/OR/Configs/Tranquility.cfg
+++ b/OR/Configs/Tranquility.cfg
@@ -18,7 +18,7 @@
         Properties
         {
 			displayName = Tranquility^N
-            description = <color=#A6DBF4>[HAZARD LEVEL: 5] \n[CLASS: Ice Giant]</color> \nLocked in perpetual twilight due to its distance from Solus, Tranquility is an ice giant in orbit around Serenity. Do not be fooled by its name and gentle cyan skies; Tranquility's rotation is extrememly rapid, resulting in supersonic equatorial winds. Exploration is not advised. \n\nTranquility's status as a planet or moon as long been debated in the scientific community. What hasn't been debated, however, is its ability to destoy incoming spacecraft.\n\nWEATHER REPORT: Severe. Supersonic wind will almost certainly destroy you long before the pressure does.
+            description = <color=#A6DBF4>[HAZARD LEVEL: 5] \n[CLASS: Ice Giant]</color> \nAn ice giant locked in perpetual twilight around Serenity. Do not be fooled by its name and gentle cyan skies; its rotation is beyond ridiculous, giving the celestial body its famous supersonic winds. Exploration is A NO. ABSOLUTELY NOT. \n\nTranquility's status as a planet or moon has long been debated by the scientific community. What hasn't been debated, however, is its ability to destroy incoming spacecraft.\n\nWEATHER REPORT: Severe. The wind will annihilate you long before the pressure does.
 			
 			albedo = 0.28
 			radius = 1500000
