--- a/OR/Configs/Vista.cfg
+++ b/OR/Configs/Vista.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#AFAFAF>[HAZARD LEVEL: 1] \n[CLASS: Vacuum]</color> \nVista is the smallest moon orbiting Echo. It plays a crucial role in stabilizing Echo’s rings and climate. The white and grey colors on its surface are likely clusters of quartz crystals and silicon. Because of its low gravity and lack of hazards, Vista is a prime destination for early trips to Echo. \n\nVista has a distinctive white band of ring matter encircling its equator, making it very easy to identify through a telescope.
+			description = <color=#AFAFAF>[HAZARD LEVEL: 1] \n[CLASS: Vacuum]</color> \nA crystalline oasis that calls Echo its home. It plays a critical role in stabilizing Echo’s rings and climate (and making the place even prettier to visit). The monochrome colors of the moon’s surface are hypothesized to be clusters of quartz crystals and silicon, which our telescopes can see shimmering in the sunlight. Because of its low gravity and lack of hazards, this world is a prime destination for early trips to Echo. \n\nVista has a distinctive white band of ring matter encircling its equator, making it very easy to identify.
 
 			radius = 70000
 			geeASL = 0.07
