--- a/OR/EVE/PQS.cfg
+++ b/OR/EVE/PQS.cfg
@@ -4,10 +4,28 @@ PQS_MANAGER
 	{
 		body = Rage
 		deactivateDistance = 175000
+		overrideKillSphere
+		{
+			altitude = -80000
+		}
 	}
 	OBJECT
 	{
 		body = Tranquility
+		deactivateDistance = 175000
+		overrideKillSphere
+		{
+			altitude = -100000
+		}
+	}
+	OBJECT
+	{
+		body = Glumo
+		deactivateDistance = 175000
+	}
+	OBJECT
+	{
+		body = Axod
 		deactivateDistance = 175000
 	}
 }
