--- a/OR/Parallax/IncreaseSubdivisionCount.cfg
+++ b/OR/Parallax/IncreaseSubdivisionCount.cfg
@@ -32,6 +32,22 @@
 			}
 		}
 	}
+	@Body[Gurdamma]
+	{
+		%PQS
+		{
+			%maxLevel = 9
+			%Mods
+			{
+				Subdivide
+				{
+					subdivisionLevel = 36
+					subdivisionRadius = 150
+					order = 999999
+				}
+			}
+		}
+	}
 	@Body[Silence]
 	{
 		%PQS
