--- a/OR/Parallax/ParallaxTerrain.cfg
+++ b/OR/Parallax/ParallaxTerrain.cfg
@@ -396,6 +396,50 @@ Parallax:NEEDS[Parallax_StockTextures]
 	}
 	Body
 	{
+		name = Gurdamma
+		emissive = false
+		Textures
+		{
+			_SurfaceTextureScale = 0.8
+
+			_SurfaceTexture = Parallax_StockTextures/Pol/PluginData/mid00.dds
+			_SurfaceTextureMid = Parallax_StockTextures/Pol/PluginData/mid00.dds
+			_SurfaceTextureHigh = Parallax_StockTextures/Pol/PluginData/mid00.dds
+			_SteepTex = Parallax_StockTextures/Pol/PluginData/steep00.dds
+
+			_BumpMap = Parallax_StockTextures/Pol/PluginData/mid01.dds
+			_BumpMapMid = Parallax_StockTextures/Pol/PluginData/mid01.dds
+			_BumpMapHigh = Parallax_StockTextures/Pol/PluginData/mid01.dds
+			_BumpMapSteep = Parallax_StockTextures/Pol/PluginData/steep01.dds
+
+			_DispTex = Parallax_StockTextures/Pol/PluginData/displacement.dds
+			_InfluenceMap = Parallax_StockTextures/Pol/PluginData/influence.dds
+
+			_SteepPower = 7
+			_SteepContrast = 4
+			_SteepMidpoint = 0.7
+			_displacement_scale = 0.066
+			_displacement_offset = 0
+
+			_Metallic = 1
+			_MetallicTint = 1,1,1
+			_Gloss = 25
+			_NormalSpecularInfluence = 1
+			_Hapke = 0.4
+			_EmissionColor = 0,0,0
+
+			_FresnelColor = 0,0,0
+			_FresnelPower = 3
+
+			_LowStart = 950
+			_LowEnd = 1050
+			_HighStart = 3300
+			_HighEnd = 3600
+			
+		}
+	}
+	Body
+	{
 		name = Cetus
 		emissive = false
 		Textures
