--- a/OR/Parallax/Scatters.cfg
+++ b/OR/Parallax/Scatters.cfg
@@ -34,6 +34,23 @@
 			}
 		}
 	}
+	@Body[Gurdamma]
+	{
+		%PQS
+		{
+			%Mods
+			{
+				ParallaxScatter
+				{
+					order = 999999
+				}
+				ScatterDistribute
+				{
+					order = 999998
+				}
+			}
+		}
+	}
 	@Body[Silence]
 	{
 		%PQS
