--- a/OR/scatterer/config/Planets/Fracture/ocean.cfg
+++ b/OR/scatterer/config/Planets/Fracture/ocean.cfg
@@ -15,8 +15,8 @@ Scatterer_ocean
 		m_UnderwaterColor = 1,0.200000003,0
 		offScreenVertexStretch = 1.25
 		alphaRadius = 1000
-		transparencyDepth = 20
-		darknessDepth = 2000
+		transparencyDepth = 0.100000001
+		darknessDepth = 1
 		refractionIndex = 1.33000004
 		skyReflectionStrength = 1
 		causticsTexturePath = OR/Scatterer_Configs/config/Planets/Caustics.png
