--- a/OR/scatterer/config/planetsList.cfg
+++ b/OR/scatterer/config/planetsList.cfg
@@ -7,7 +7,7 @@
 		{
 			celestialBodyName = Kerbin
 			transformName = Kerbin
-			loadDistance = 300000000
+			loadDistance = 400000000
 			unloadDistance = 400000000
 			hasOcean = False
 			flatScaledSpaceModel = False
@@ -25,7 +25,7 @@
 		{
 			celestialBodyName = Fracture
 			transformName = Fracture
-			loadDistance = 200000000
+			loadDistance = 300000000
 			unloadDistance = 300000000
 			hasOcean = True
 			flatScaledSpaceModel = False
@@ -43,7 +43,7 @@
 		{
 			celestialBodyName = Echo
 			transformName = Echo
-			loadDistance = 200000000
+			loadDistance = 300000000
 			unloadDistance = 300000000
 			hasOcean = True
 			flatScaledSpaceModel = False
@@ -62,8 +62,8 @@
 		{
 			celestialBodyName = Rage
 			transformName = Rage
-			loadDistance = 1000000000
-			unloadDistance = 1000000000
+			loadDistance = 2000000000
+			unloadDistance = 2000000000
 			hasOcean = False
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
@@ -82,7 +82,7 @@
 		{
 			celestialBodyName = Abyss
 			transformName = Abyss
-			loadDistance = 200000000
+			loadDistance = 300000000
 			unloadDistance = 300000000
 			hasOcean = True
 			flatScaledSpaceModel = False
@@ -103,7 +103,7 @@
 		{
 			celestialBodyName = Windswept
 			transformName = Windswept
-			loadDistance = 200000000
+			loadDistance = 300000000
 			unloadDistance = 300000000
 			hasOcean = False
 			flatScaledSpaceModel = False
@@ -121,7 +121,7 @@
 		{
 			celestialBodyName = Scourge
 			transformName = Scourge
-			loadDistance = 200000000
+			loadDistance = 300000000
 			unloadDistance = 300000000
 			hasOcean = True
 			flatScaledSpaceModel = False
@@ -141,6 +141,58 @@
 		{
 			celestialBodyName = Silence
 			transformName = Silence
+			loadDistance = 300000000
+			unloadDistance = 300000000
+			hasOcean = True
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			mainSunCelestialBody = Sun
+			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Abyss
+				Item = Rage
+				Item = Icebound
+			}
+		}
+		Item
+		{
+			celestialBodyName = Glumo
+			transformName = Glumo
+			loadDistance = 200000000
+			unloadDistance = 300000000
+			hasOcean = False
+			flatScaledSpaceModel = True
+			usesCloudIntegration = True
+			mainSunCelestialBody = Sun
+			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Merbel
+			}
+		}
+		Item
+		{
+			celestialBodyName = Axod
+			transformName = Axod
+			loadDistance = 200000000
+			unloadDistance = 300000000
+			hasOcean = False
+			flatScaledSpaceModel = True
+			usesCloudIntegration = True
+			mainSunCelestialBody = Sun
+			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+		}
+		Item
+		{
+			celestialBodyName = Gurdamma
+			transformName = Gurdamma
 			loadDistance = 200000000
 			unloadDistance = 300000000
 			hasOcean = True
@@ -161,8 +213,8 @@
 		{
 			celestialBodyName = Serenity
 			transformName = Serenity
-			loadDistance = 1000000000
-			unloadDistance = 1000000000
+			loadDistance = 1500000000
+			unloadDistance = 1500000000
 			hasOcean = True
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
