--- a/OR/Configs/MB.cfg
+++ b/OR/Configs/MB.cfg
@@ -15,7 +15,7 @@
 		}
 		Properties
 		{
-			description = <color=#4CFF00>[HAZARD LEVEL: ?] \n[CLASS: ?]</color> \nOh, huh. So that's where it went... \n\nMaybe it's be safe to visit this time?
+			description = <color=#4CFF00>[HAZARD LEVEL: ?] \n[CLASS: ?]</color> \nOh, huh. So that's where it went....
 
 			radius = 1000
 			geeASL = 0.001
@@ -82,6 +82,13 @@
 			{
 				texture = OR/OR_Textures/PluginData/MB_Color.dds
 				normals = OR/OR_Textures/PluginData/MB_Normal.png
+			}
+			VertexColorMapEmissive
+			{
+				blendMode = Additive
+				map = OR/OR_Textures/PluginData/MB_Emissive.dds
+				brightness = 1
+				transparency = 0.5
 			}
 		}
 		PQS
