--- a/OR/Configs/Tension.cfg
+++ b/OR/Configs/Tension.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#CCCCCC>[HAZARD LEVEL: 2] \n[CLASS: Exotic Vacuum]</color> \nTension rotates at nearly orbital velocity, resulting in extreme internal heating and visible surface warping. How the moon remains intact under such immense stress is currently unknown. Orbiting opposite to the direction of rotation is not recommended. \n\nWhatever material Tension is made of, it’s super durable. A sample of it would be highly appreciated.
+			description = <color=#CCCCCC>[HAZARD LEVEL: 2] \n[CLASS: Exotic Vacuum]</color> \nA celestial top spinning at nearly orbital velocity. Its rapid rotation results in extreme internal heating and visible surface warping—oh, and motion sickness. Lots of motion sickness. How the moon remains intact under such immense stress is currently unknown (but man, we are jealous). Orbiting opposite to its direction of motion is not recommended. \n\nWhatever material Tension is made of, it’s super durable. A sample of it would be highly appreciated.
 			radius = 75000
 			geeASL = 0.08
 			displayName = Tension^N
