--- a/OR/EVE/Aurora.cfg
+++ b/OR/EVE/Aurora.cfg
@@ -10,25 +10,79 @@ EVE_CLOUDS
 		altitude = 15000
 		settings
 		{
-			_DetailScale = 16
-			_DistFadeVert = 3.99999E-05
-			_UVNoiseAnimation = 0.2,0.2
-			_UVNoiseStrength = 0.02
-			_UVNoiseScale = 0.5
 			_Color = 255, 255, 255, 140
-			_MainTex = OR/EVE/Textures/Echo_Aurora
-			_DetailTex = OR/EVE/Textures/detaileve1
-			_UVNoiseTex = OR/EVE/Textures/uvnoise1
+			_DetailScale = 2
+			_DetailDist = 6E-09
+			_UVNoiseScale = 0.55
+			_UVNoiseStrength = 0.04
+			_UVNoiseAnimation = 0.04,0.01
+			_FlowMap
+			{
+			}
+			_MainTex
+			{
+				value = OR/EVE/Textures/Echo_Aurora
+			}
+			_UVNoiseTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+			}
+			_DetailTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/detailAurora
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_FalloffScale = 10
-				_RimDist = 0.001
-				_FalloffPow = 0.7
-				_InvFade = 0.02
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
 				_MinLight = 1
+			}
+		}
+		layer2D
+		{
+			macroCloudMaterial
+			{
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
+				_MinLight = 1
+			}
+		}
+		layerRaymarchedVolume
+		{
+			scaledFadeStartAltitude = -1000
+			scaledFadeEndAltitude = -100
+			noise
+			{
+			}
+			detailNoise
+			{
+			}
+			raymarchingSettings
+			{
+			}
+			cloudTypes
+			{
+				Item
+				{
+					coverageCurve
+					{
+					}
+				}
+			}
+			lightVolumeSettings
+			{
+				maxLightVolumeRadius = 671850
+				useLightVolume = False
+			}
+			phaseFunctions
+			{
 			}
 		}
 	}
@@ -38,29 +92,83 @@ EVE_CLOUDS
 		body = Scourge
 		speed = 0,0,0
 		detailSpeed = 100,300,0
-		offset = 0,163,0
 		altitude = 15000
 		settings
 		{
-			_DetailScale = 16
-			_DistFadeVert = 3.99999E-05
-			_UVNoiseAnimation = 0.2,0.2
-			_UVNoiseStrength = 0.03
-			_UVNoiseScale = 0.6
+			_DetailScale = 2
+			_UVNoiseScale = 0.5
+			_UVNoiseStrength = 0.05
+			_UVNoiseAnimation = 0.05,0.02
+			_DetailDist = 4E-08
+			_DistFadeVert = 40E-05
 			_Color = 255, 255, 255, 140
-			_MainTex = OR/EVE/Textures/Scourge_Tendrils
-			_DetailTex = OR/EVE/Textures/detaileve1
-			_UVNoiseTex = OR/EVE/Textures/uvnoise1
+			_FlowMap
+			{
+			}
+			_MainTex
+			{
+				value = OR/EVE/Textures/Scourge_Tendrils
+			}
+			_UVNoiseTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+			}
+			_DetailTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/detailAurora
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_FalloffScale = 10
-				_RimDist = 0.001
-				_FalloffPow = 0.7
-				_InvFade = 0.02
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
 				_MinLight = 1
+			}
+		}
+		layer2D
+		{
+			macroCloudMaterial
+			{
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
+				_MinLight = 1
+			}
+		}
+		layerRaymarchedVolume
+		{
+			scaledFadeStartAltitude = -1000
+			scaledFadeEndAltitude = -100
+			noise
+			{
+			}
+			detailNoise
+			{
+			}
+			raymarchingSettings
+			{
+			}
+			cloudTypes
+			{
+				Item
+				{
+					coverageCurve
+					{
+					}
+				}
+			}
+			lightVolumeSettings
+			{
+				maxLightVolumeRadius = 671850
+				useLightVolume = False
+			}
+			phaseFunctions
+			{
 			}
 		}
 	}
@@ -74,25 +182,79 @@ EVE_CLOUDS
 		altitude = 15000
 		settings
 		{
-			_DetailScale = 16
-			_DistFadeVert = 3.99999E-05
-			_UVNoiseAnimation = 0.2,0.2
-			_UVNoiseStrength = 0.02
-			_UVNoiseScale = 0.5
 			_Color = 255, 255, 255, 140
-			_MainTex = OR/EVE/Textures/Silence_Aurora
-			_DetailTex = OR/EVE/Textures/detaileve1
-			_UVNoiseTex = OR/EVE/Textures/uvnoise1
+			_DetailScale = 2
+			_DetailDist = 6E-09
+			_UVNoiseScale = 0.55
+			_UVNoiseStrength = 0.04
+			_UVNoiseAnimation = 0.04,0.01
+			_FlowMap
+			{
+			}
+			_MainTex
+			{
+				value = OR/EVE/Textures/Silence_Aurora
+			}
+			_UVNoiseTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+			}
+			_DetailTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/detailAurora
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_FalloffScale = 10
-				_RimDist = 0.001
-				_FalloffPow = 0.7
-				_InvFade = 0.02
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
 				_MinLight = 1
+			}
+		}
+		layer2D
+		{
+			macroCloudMaterial
+			{
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
+				_MinLight = 1
+			}
+		}
+		layerRaymarchedVolume
+		{
+			scaledFadeStartAltitude = -1000
+			scaledFadeEndAltitude = -100
+			noise
+			{
+			}
+			detailNoise
+			{
+			}
+			raymarchingSettings
+			{
+			}
+			cloudTypes
+			{
+				Item
+				{
+					coverageCurve
+					{
+					}
+				}
+			}
+			lightVolumeSettings
+			{
+				maxLightVolumeRadius = 671850
+				useLightVolume = False
+			}
+			phaseFunctions
+			{
 			}
 		}
 	}
@@ -106,25 +268,63 @@ EVE_CLOUDS
 		altitude = 15000
 		settings
 		{
-			_DetailScale = 16
-			_DistFadeVert = 3.99999E-05
-			_UVNoiseAnimation = 0.2,0.2
-			_UVNoiseStrength = 0.02
-			_UVNoiseScale = 0.5
 			_Color = 255, 255, 255, 140
-			_MainTex = OR/EVE/Textures/Windswept_Aurora
-			_DetailTex = OR/EVE/Textures/detaileve1
-			_UVNoiseTex = OR/EVE/Textures/uvnoise1
+			_DetailScale = 2
+			_DetailDist = 6E-09
+			_UVNoiseScale = 0.5
+			_UVNoiseStrength = 0.05
+			_UVNoiseAnimation = 0.05,0.02
+			_FlowMap
+			{
+			}
+			_MainTex
+			{
+				value = OR/EVE/Textures/Windswept_Aurora
+			}
+			_UVNoiseTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+			}
+			_DetailTex
+			{
+				value = StockEVEAurora/EVE/Textures/_Detail/detailAurora
+			}
+		}
+		layerRaymarchedVolume
+		{
+			scaledFadeStartAltitude = -1000
+			scaledFadeEndAltitude = -100
+			noise
+			{
+			}
+			detailNoise
+			{
+			}
+			raymarchingSettings
+			{
+			}
+			cloudTypes
+			{
+				Item
+				{
+					coverageCurve
+					{
+					}
+				}
+			}
+			lightVolumeSettings
+			{
+				maxLightVolumeRadius = 671850
+				useLightVolume = False
+			}
+			phaseFunctions
+			{
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_FalloffScale = 10
-				_RimDist = 0.001
-				_FalloffPow = 0.7
-				_InvFade = 0.02
-				_MinLight = 1
 			}
 		}
 	}
